--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,10 +26,10 @@ Author URL: http://w3layouts.com
 			<!--/nav-->
 			<nav class="navbar navbar-expand-lg navbar-light fill px-lg-0 py-0 px-3">
 				<div class="container">
-					<h1><a class="navbar-brand" href="index.html"><span class="fa fa-play icon-log" aria-hidden="true"></span>
+					<h1><a class="navbar-brand" href="index.ejs"><span class="fa fa-play icon-log" aria-hidden="true"></span>
 						KinoTicket </a></h1>
 					<!-- if logo is image enable this   
-							<a class="navbar-brand" href="#index.html">
+							<a class="navbar-brand" href="#index.ejs">
 								<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 							</a> -->
 					<button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
@@ -125,7 +125,7 @@ Author URL: http://w3layouts.com
 	<div class="w3l-breadcrumbs">
 		<nav id="breadcrumbs" class="breadcrumbs">
 			<div class="container page-wrapper">
-			<a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">About</span>
+			<a href="index.ejs">Home</a> » <span class="breadcrumb_last" aria-current="page">About</span>
 			</div>
 		</nav>
 	</div>
@@ -652,8 +652,8 @@ Author URL: http://w3layouts.com
 								<div class="col-md-3 col-sm-6 sub-two-right mt-5">
 									<h6>Information</h6>
 									<ul>
-										<li><a href="index.html">Home</a> </li>
-										<li><a href="about.html">About</a> </li>
+										<li><a href="index.ejs">Home</a> </li>
+										<li><a href="about.ejs">About</a> </li>
 										<li><a href="#">Tv Series</a> </li>
 										<li><a href="#">Blogs</a> </li>
 										<li><a href="#">Login</a></li>
