--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,11 +29,11 @@ Author URL: http://w3layouts.com
 		<!--/nav-->
 		<nav class="navbar navbar-expand-lg navbar-light fill px-lg-0 py-0 px-3">
 			<div class="container">
-				<h1><a class="navbar-brand" href="index.html"><span class="fa fa-play icon-log"
-																	aria-hidden="true"></span>
+				<h1><a class="navbar-brand" href="index.ejs"><span class="fa fa-play icon-log"
+																   aria-hidden="true"></span>
 					KinoTicket </a></h1>
 				<!-- if logo is image enable this   
-						<a class="navbar-brand" href="#index.html">
+						<a class="navbar-brand" href="#index.ejs">
 							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 						</a> -->
 				<button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
@@ -1137,8 +1137,8 @@ Author URL: http://w3layouts.com
 								<div class="col-md-3 col-sm-6 sub-two-right mt-5">
 									<h6>Information</h6>
 									<ul>
-										<li><a href="index.html">Home</a> </li>
-										<li><a href="about.html">About</a> </li>
+										<li><a href="index.ejs">Home</a> </li>
+										<li><a href="../views/about.ejs">About</a> </li>
 										<li><a href="#">Tv Series</a> </li>
 										<li><a href="#">Blogs</a> </li>
 										<li><a href="#">Login</a></li>
