--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1417,4 +1417,4 @@ Author URL: http://w3layouts.com
 
 <script src="js/bootstrap.min.js"></script>
 <!--PAYPAL BUTTON-->
-<script src="Paypal.js"></script>
+<script src="js/Paypal.js"></script>
