--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@ Author URL: http://w3layouts.com
 	<script src="https://www.paypal.com/sdk/js?client-id=ASd8lRATRCMiScUMj4EWZG7wIyTSjuHyW_H9K6iOWpf0n7OPrhk9v6f8kYekSguuIbu_gFc9yn0CHDzV"></script>
 	<!-- Template CSS -->
 	<link rel="stylesheet" href="css/style-starter.css">
+	<link rel="stylesheet" href="css/loginform.css">
 	<!-- Template CSS -->
 	<link href="//fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap"
 		rel="stylesheet">
@@ -53,7 +54,7 @@ Author URL: http://w3layouts.com
 							<a class="nav-link" href="about">About</a>
 						</li>
 				<li class="nav-item">
-								<a class="nav-link" href="genre">Genre</a>
+								<a class="nav-link" href="genre">Sign Up</a>
 							</li>
 
 						<li class="nav-item">
@@ -1205,6 +1206,7 @@ Author URL: http://w3layouts.com
 </body>
 
 </html>
+
 <!-- responsive tabs -->
 <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/easyResponsiveTabs.js"></script>
