--- a/views/genre.ejs
+++ b/views/genre.ejs
@@ -13,7 +13,7 @@
 <!-- The Modal (contains the Sign Up form) -->
 <div id="id01" class="modal">
 <!--    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal"></span>-->
-    <form class="modal-content" action="/action_page.php">
+    <form class="modal-content" action="genre" method="post">
         <div class="container">
             <h1>Sign Up</h1>
             <p>Please fill in this form to create an account.</p>
@@ -22,10 +22,10 @@
             <input type="text" placeholder="Enter Email" name="email" required>
 
             <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <input type="password" placeholder="Enter Password" name="password" required>
 
             <label for="psw-repeat"><b>Repeat Password</b></label>
-            <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+            <input type="password" placeholder="Repeat Password" name="passwordAgain" required>
 
             <label>
                 <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
