--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,9 @@ Author URL: http://w3layouts.com
 						<li class="nav-item">
 							<a class="nav-link" href="contact">Contact</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="booking">Booking</a>
+						</li>
 					</ul>
 
 					<!--/search-right-->
