--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -16,10 +16,10 @@
     <form class="modal-content" method="post">
         <div class="container">
             <h1>Booking</h1>
-            <p>Please fill in this form to create an account.</p>
+            <p>Please fill in this form to booking the ticket.</p>
             <hr>
-            <label for="author"><b>Author</b></label>
-            <input type="text" placeholder="Enter Email" name="author" required>
+            <label for="author"><b>Movie</b></label>
+            <input type="text" placeholder="Enter Movie" name="author" required>
 
             <label for="psw"><b>Name</b></label>
             <input type="text" placeholder="Name" name="name" required>
@@ -34,7 +34,7 @@
 
                 <button type="button" onclick="window.location.href='/'" class="cancelbtn">Cancel</button>
 
-                <button type="submit" class="signup">Send</button>
+                <button type="submit"  class="signup">Send</button>
                 <!--                onclick="document.getElementById('id01').style.display='none'"-->
             </div>
         </div>
