--- a/views/genre.ejs
+++ b/views/genre.ejs
@@ -12,8 +12,8 @@
 
 <!-- The Modal (contains the Sign Up form) -->
 <div id="id01" class="modal">
-<!--    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal"></span>-->
-    <form class="modal-content" action="genre" method="post">
+    <!--    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal"></span>-->
+    <form class="modal-content" method="post">
         <div class="container">
             <h1>Sign Up</h1>
             <p>Please fill in this form to create an account.</p>
@@ -32,13 +32,14 @@
             </label>
 
             <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+            <p>Go through this link if you <a href="login" style="color:dodgerblue">already have account?</a></p>
 
             <div class="clearfix">
 
                 <button type="button" onclick="window.location.href='/'" class="cancelbtn">Cancel</button>
 
                 <button type="submit" class="signup">Sign Up</button>
-<!--                onclick="document.getElementById('id01').style.display='none'"-->
+                <!--                onclick="document.getElementById('id01').style.display='none'"-->
             </div>
         </div>
     </form>
