--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,6 +63,9 @@ Author URL: http://w3layouts.com
 						<li class="nav-item">
 							<a class="nav-link" href="booking">Booking</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="product">Movie</a>
+						</li>
 					</ul>
 
 					<!--/search-right-->
@@ -1181,6 +1184,7 @@ Author URL: http://w3layouts.com
 			<button onclick="topFunction()" id="movetop" title="Go to top">
 				<span class="fa fa-arrow-up" aria-hidden="true"></span>
 			</button>
+
 			<script>
 				// When the user scrolls down 20px from the top of the document, show the button
 				window.onscroll = function () {
